# meeting-assistant

./: .gitattributes  .gitignore  CLAUDE.md  INSTALL.md  README.md  bootstrap.sh  setup.sh
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 28cb64f60f16_init.py  98bfcb3b85de_add_series_tags_glossary_speaker_names_.py  c1e2f2e247ca_add_chat_messages.py  d0a00e44b3bb_add_num_speakers_and_meeting_brief.py  f8a91c4b0e2d_add_users_and_owner_id.py
backend/app/: auth.py  config.py  db.py  main.py  models.py  schemas.py
backend/app/prompts/: summary_system.txt
backend/app/routers/: auth.py  chat.py  meetings.py  realtime.py  series.py  stats.py  tags.py
backend/app/services/: chat.py  glossary.py  pipeline.py  realtime_token.py  series_match.py  speakers.py  storage.py  summarizer.py  transcription.py
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_glossary.py  test_meetings_extensions.py  test_pipeline_e2e.py  test_realtime_token.py  test_scribe_smoke.py  test_series_match.py  test_series_router.py  test_summarizer_mock.py
extension/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
extension/src/: manifest.json  offscreen.html  offscreen.ts  popup.css  popup.html  popup.ts  service_worker.ts
frontend/: package.json  pnpm-lock.yaml
frontend/app/: auth-provider.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
frontend/components/: action-items-view.tsx  chat-view.tsx  decisions-view.tsx  dropzone.tsx  email-draft-view.tsx  empty-state.tsx  live-captions.tsx  minutes-view.tsx  (+14 more)
(+15 files in other folders)
