[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "argon2-cffi>=23.1.0",
    "elevenlabs>=2.44.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "jsonschema>=4.26.0",
    "pydantic-settings>=2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "rapidfuzz>=3.14.5",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]

[tool.pyright]
include = ["app", "tests"]
extraPaths = ["."]
pythonVersion = "3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

